[gd_scene load_steps=16 format=3 uid="uid://cwsj26l5jjtyr"]

[ext_resource type="Script" path="res://scripts/laboratory_ui.gd" id="1_q6itj"]
[ext_resource type="FontFile" uid="uid://dbli7jexs0nak" path="res://assets/ui/GelatinTTFCAPS.ttf" id="1_sma4a"]
[ext_resource type="Shader" path="res://data/lsd_trip_shader.gdshader" id="2_jlkbk"]
[ext_resource type="Texture2D" uid="uid://be8qdyffwiv1" path="res://assets/textures/Texture_512x512_33.png" id="3_dlio3"]
[ext_resource type="Script" path="res://scripts/distortion_layer.gd" id="4_rykn0"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_t1emw"]
frequency = 0.0004

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_gscbu"]
seamless = true
noise = SubResource("FastNoiseLite_t1emw")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_clfg1"]
frequency = 0.0026
fractal_octaves = 9
fractal_gain = 0.355

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8150i"]
seamless = true
seamless_blend_skirt = 0.558
noise = SubResource("FastNoiseLite_clfg1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1y0p2"]
shader = ExtResource("2_jlkbk")
shader_parameter/scroll = Vector2(0.28, 0.05)
shader_parameter/scroll2 = Vector2(-0.05, -0.05)
shader_parameter/distortion_strength = 4.75e-08
shader_parameter/noise = SubResource("NoiseTexture2D_gscbu")
shader_parameter/noise2 = SubResource("NoiseTexture2D_8150i")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tck06"]
bg_color = Color(0, 0, 0, 0.745098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rr3mt"]
bg_color = Color(0, 0, 0, 0.745098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58vvr"]
bg_color = Color(0, 0, 0, 0.745098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gv6vr"]
bg_color = Color(0, 0, 0, 0.745098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jugc7"]
bg_color = Color(0, 0, 0, 0.745098)

[node name="laboratory_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1286.0
offset_top = 28.0
offset_right = -42.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6itj")

[node name="distortion_layer" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_1y0p2")
position = Vector2(-329, 507)
scale = Vector2(3.80664, 2.2207)
texture = ExtResource("3_dlio3")
script = ExtResource("4_rykn0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="play_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_tck06")
text = "Begin new 
Astral 
Projection"

[node name="upgrade_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_rr3mt")
text = "unlock 
akashik Intel"

[node name="options_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_rr3mt")
text = "options
"

[node name="credits_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_58vvr")
text = "credits
"

[node name="quit_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_gv6vr")
text = "quit
"

[node name="options" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="volume" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/volume"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="volume_label" type="Label" parent="MarginContainer/options/volume"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 75
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="volume_slider" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/volume_slider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/options/volume_slider"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="master_volume_slider" type="HSlider" parent="MarginContainer/options/volume_slider/MarginContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="music_volume" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/music_volume"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="volume_label" type="Label" parent="MarginContainer/options/music_volume"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 75
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_volume_slider" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/music_volume_slider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/options/music_volume_slider"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="music_volume_slider" type="HSlider" parent="MarginContainer/options/music_volume_slider/MarginContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="sfx_volume" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/sfx_volume"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="volume_label" type="Label" parent="MarginContainer/options/sfx_volume"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 75
text = "Sfx Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx_volume_slider" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/sfx_volume_slider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/options/sfx_volume_slider"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="sfx_volume_slider" type="HSlider" parent="MarginContainer/options/sfx_volume_slider/MarginContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="language" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/language"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="language_label" type="Label" parent="MarginContainer/options/language"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 65
text = "Language
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="language_dropdown" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/language_dropdown"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/options/language_dropdown"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="OptionButton" type="OptionButton" parent="MarginContainer/options/language_dropdown/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 50
alignment = 1
item_count = 11
selected = 0
fit_to_longest_item = false
popup/item_0/text = "English[en]"
popup/item_0/id = 0
popup/item_1/text = "中文[zh]"
popup/item_1/id = 1
popup/item_2/text = "Deutsch[de]"
popup/item_2/id = 2
popup/item_3/text = "français[fr]"
popup/item_3/id = 3
popup/item_4/text = "italiano[it]"
popup/item_4/id = 4
popup/item_5/text = "日本語[ja]"
popup/item_5/id = 5
popup/item_6/text = "한국어[ko]"
popup/item_6/id = 6
popup/item_7/text = "português[pt]"
popup/item_7/id = 7
popup/item_8/text = "русский[ru]"
popup/item_8/id = 8
popup/item_9/text = "español[es] "
popup/item_9/id = 9
popup/item_10/text = "Turkish [tr]"
popup/item_10/id = 10

[node name="resolution2" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/resolution2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="volume_label" type="Label" parent="MarginContainer/options/resolution2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 65
text = "Resolution
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resolution_dropdown" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/resolution_dropdown"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/options/resolution_dropdown"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="OptionButton" type="OptionButton" parent="MarginContainer/options/resolution_dropdown/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 50
alignment = 1
item_count = 4
selected = 2
popup/item_0/text = "1280 X 720"
popup/item_0/id = 0
popup/item_1/text = "1600 X 900"
popup/item_1/id = 1
popup/item_2/text = "1920 X 1080"
popup/item_2/id = 2
popup/item_3/text = "3840 X 1600"
popup/item_3/id = 3

[node name="shader_resolution2" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/shader_resolution2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="volume_label" type="Label" parent="MarginContainer/options/shader_resolution2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 65
text = "Background quality"
horizontal_alignment = 1
vertical_alignment = 1

[node name="shader_resolution_dropdown2" type="Control" parent="MarginContainer/options"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/options/shader_resolution_dropdown2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/options/shader_resolution_dropdown2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="OptionButton" type="OptionButton" parent="MarginContainer/options/shader_resolution_dropdown2/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 50
alignment = 1
item_count = 4
selected = 2
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Mid"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2
popup/item_3/text = "High AF"
popup/item_3/id = 3

[node name="back_button" type="Button" parent="MarginContainer/options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sma4a")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jugc7")
text = "back
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/upgrade_button" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/credits_button" to="." method="_on_credits_button_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="drag_ended" from="MarginContainer/options/volume_slider/MarginContainer/master_volume_slider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/options/volume_slider/MarginContainer/master_volume_slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="drag_ended" from="MarginContainer/options/music_volume_slider/MarginContainer/music_volume_slider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/options/music_volume_slider/MarginContainer/music_volume_slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="drag_ended" from="MarginContainer/options/sfx_volume_slider/MarginContainer/sfx_volume_slider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/options/sfx_volume_slider/MarginContainer/sfx_volume_slider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/options/language_dropdown/MarginContainer/OptionButton" to="." method="_on_language_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/options/resolution_dropdown/MarginContainer/OptionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/options/shader_resolution_dropdown2/MarginContainer/OptionButton" to="." method="_on_shader_option_item_selected"]
[connection signal="pressed" from="MarginContainer/options/back_button" to="." method="_on_back_button_pressed"]
